MiLenguajeParser.py
# Generated from MiLenguaje.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiLenguajeParser ( Parser ):

    grammarFileName = "MiLenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'loadout'", "'{'", "'}'", "'real'", "':'", 
                     "','", "'spawn'", "'='", "'loot'", "'('", "')'", "'drop'", 
                     "'peek'", "'fallback'", "'rush'", "'raiz'", "'^'", 
                     "'*'", "'/'", "'+'", "'-'", "'no'", "'y'", "'o'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "OP_REL", "CADENA", "ID", "NUMERO_REAL", 
                      "NL", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_declaracion_vars = 1
    RULE_declaracion = 2
    RULE_cuerpo_principal = 3
    RULE_sentencia = 4
    RULE_asignacion = 5
    RULE_lectura = 6
    RULE_escritura = 7
    RULE_expr_escritura = 8
    RULE_condicional = 9
    RULE_repetitiva = 10
    RULE_expr = 11
    RULE_condicion = 12

    ruleNames =  [ "programa", "declaracion_vars", "declaracion", "cuerpo_principal", 
                   "sentencia", "asignacion", "lectura", "escritura", "expr_escritura", 
                   "condicional", "repetitiva", "expr", "condicion" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    OP_REL=25
    CADENA=26
    ID=27
    NUMERO_REAL=28
    NL=29
    WS=30
    COMENTARIO=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion_vars(self):
            return self.getTypedRuleContext(MiLenguajeParser.Declaracion_varsContext,0)


        def cuerpo_principal(self):
            return self.getTypedRuleContext(MiLenguajeParser.Cuerpo_principalContext,0)


        def EOF(self):
            return self.getToken(MiLenguajeParser.EOF, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = MiLenguajeParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.declaracion_vars()
            self.state = 27
            self.cuerpo_principal()
            self.state = 28
            self.match(MiLenguajeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracion_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.NL)
            else:
                return self.getToken(MiLenguajeParser.NL, i)

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.DeclaracionContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_declaracion_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_vars" ):
                listener.enterDeclaracion_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_vars" ):
                listener.exitDeclaracion_vars(self)




    def declaracion_vars(self):

        localctx = MiLenguajeParser.Declaracion_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracion_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(MiLenguajeParser.T__0)
            self.state = 31
            self.match(MiLenguajeParser.T__1)
            self.state = 32
            self.match(MiLenguajeParser.NL)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 33
                self.declaracion()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(MiLenguajeParser.T__2)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 40
                self.match(MiLenguajeParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.ID)
            else:
                return self.getToken(MiLenguajeParser.ID, i)

        def NL(self):
            return self.getToken(MiLenguajeParser.NL, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):

        localctx = MiLenguajeParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(MiLenguajeParser.T__3)
            self.state = 44
            self.match(MiLenguajeParser.T__4)
            self.state = 45
            self.match(MiLenguajeParser.ID)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 46
                self.match(MiLenguajeParser.T__5)
                self.state = 47
                self.match(MiLenguajeParser.ID)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(MiLenguajeParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cuerpo_principalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.NL)
            else:
                return self.getToken(MiLenguajeParser.NL, i)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_cuerpo_principal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo_principal" ):
                listener.enterCuerpo_principal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo_principal" ):
                listener.exitCuerpo_principal(self)




    def cuerpo_principal(self):

        localctx = MiLenguajeParser.Cuerpo_principalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cuerpo_principal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(MiLenguajeParser.T__6)
            self.state = 56
            self.match(MiLenguajeParser.T__1)
            self.state = 57
            self.match(MiLenguajeParser.NL)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 671134208) != 0):
                self.state = 58
                self.sentencia()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(MiLenguajeParser.T__2)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 65
                self.match(MiLenguajeParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(MiLenguajeParser.AsignacionContext,0)


        def lectura(self):
            return self.getTypedRuleContext(MiLenguajeParser.LecturaContext,0)


        def escritura(self):
            return self.getTypedRuleContext(MiLenguajeParser.EscrituraContext,0)


        def condicional(self):
            return self.getTypedRuleContext(MiLenguajeParser.CondicionalContext,0)


        def repetitiva(self):
            return self.getTypedRuleContext(MiLenguajeParser.RepetitivaContext,0)


        def NL(self):
            return self.getToken(MiLenguajeParser.NL, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = MiLenguajeParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentencia)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.asignacion()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.lectura()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.escritura()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.condicional()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.repetitiva()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.match(MiLenguajeParser.NL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExprContext,0)


        def NL(self):
            return self.getToken(MiLenguajeParser.NL, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = MiLenguajeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(MiLenguajeParser.ID)
            self.state = 77
            self.match(MiLenguajeParser.T__7)
            self.state = 78
            self.expr(0)
            self.state = 79
            self.match(MiLenguajeParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LecturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def NL(self):
            return self.getToken(MiLenguajeParser.NL, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_lectura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLectura" ):
                listener.enterLectura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLectura" ):
                listener.exitLectura(self)




    def lectura(self):

        localctx = MiLenguajeParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(MiLenguajeParser.T__8)
            self.state = 82
            self.match(MiLenguajeParser.T__9)
            self.state = 83
            self.match(MiLenguajeParser.ID)
            self.state = 84
            self.match(MiLenguajeParser.T__10)
            self.state = 85
            self.match(MiLenguajeParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_escritura(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.Expr_escrituraContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.Expr_escrituraContext,i)


        def NL(self):
            return self.getToken(MiLenguajeParser.NL, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)




    def escritura(self):

        localctx = MiLenguajeParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_escritura)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MiLenguajeParser.T__11)
            self.state = 88
            self.match(MiLenguajeParser.T__9)
            self.state = 89
            self.expr_escritura()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 90
                self.match(MiLenguajeParser.T__5)
                self.state = 91
                self.expr_escritura()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MiLenguajeParser.T__10)
            self.state = 98
            self.match(MiLenguajeParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_escrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(MiLenguajeParser.CADENA, 0)

        def expr(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExprContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expr_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_escritura" ):
                listener.enterExpr_escritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_escritura" ):
                listener.exitExpr_escritura(self)




    def expr_escritura(self):

        localctx = MiLenguajeParser.Expr_escrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr_escritura)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(MiLenguajeParser.CADENA)
                pass
            elif token in [10, 16, 27, 28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion(self):
            return self.getTypedRuleContext(MiLenguajeParser.CondicionContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.NL)
            else:
                return self.getToken(MiLenguajeParser.NL, i)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = MiLenguajeParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MiLenguajeParser.T__12)
            self.state = 105
            self.match(MiLenguajeParser.T__9)
            self.state = 106
            self.condicion(0)
            self.state = 107
            self.match(MiLenguajeParser.T__10)
            self.state = 108
            self.match(MiLenguajeParser.T__1)
            self.state = 109
            self.match(MiLenguajeParser.NL)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 671134208) != 0):
                self.state = 110
                self.sentencia()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(MiLenguajeParser.T__2)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 117
                self.match(MiLenguajeParser.T__13)
                self.state = 118
                self.match(MiLenguajeParser.T__1)
                self.state = 119
                self.match(MiLenguajeParser.NL)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 671134208) != 0):
                    self.state = 120
                    self.sentencia()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.match(MiLenguajeParser.T__2)


            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 129
                self.match(MiLenguajeParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepetitivaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion(self):
            return self.getTypedRuleContext(MiLenguajeParser.CondicionContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MiLenguajeParser.NL)
            else:
                return self.getToken(MiLenguajeParser.NL, i)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_repetitiva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepetitiva" ):
                listener.enterRepetitiva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepetitiva" ):
                listener.exitRepetitiva(self)




    def repetitiva(self):

        localctx = MiLenguajeParser.RepetitivaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_repetitiva)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MiLenguajeParser.T__14)
            self.state = 133
            self.match(MiLenguajeParser.T__9)
            self.state = 134
            self.condicion(0)
            self.state = 135
            self.match(MiLenguajeParser.T__10)
            self.state = 136
            self.match(MiLenguajeParser.T__1)
            self.state = 137
            self.match(MiLenguajeParser.NL)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 671134208) != 0):
                self.state = 138
                self.sentencia()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(MiLenguajeParser.T__2)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 145
                self.match(MiLenguajeParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprSumaRestaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprSumaResta" ):
                listener.enterExprSumaResta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprSumaResta" ):
                listener.exitExprSumaResta(self)


    class ExprPotenciaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPotencia" ):
                listener.enterExprPotencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPotencia" ):
                listener.exitExprPotencia(self)


    class ExprNumeroContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMERO_REAL(self):
            return self.getToken(MiLenguajeParser.NUMERO_REAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNumero" ):
                listener.enterExprNumero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNumero" ):
                listener.exitExprNumero(self)


    class ExprParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprParens" ):
                listener.enterExprParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprParens" ):
                listener.exitExprParens(self)


    class ExprMultDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiLenguajeParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiLenguajeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMultDiv" ):
                listener.enterExprMultDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMultDiv" ):
                listener.exitExprMultDiv(self)


    class ExprRaizContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprRaiz" ):
                listener.enterExprRaiz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprRaiz" ):
                listener.exitExprRaiz(self)


    class ExprIDContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiLenguajeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprID" ):
                listener.enterExprID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprID" ):
                listener.exitExprID(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiLenguajeParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = MiLenguajeParser.ExprParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 149
                self.match(MiLenguajeParser.T__9)
                self.state = 150
                self.expr(0)
                self.state = 151
                self.match(MiLenguajeParser.T__10)
                pass
            elif token in [16]:
                localctx = MiLenguajeParser.ExprRaizContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 153
                self.match(MiLenguajeParser.T__15)
                self.state = 154
                self.match(MiLenguajeParser.T__9)
                self.state = 155
                self.expr(0)
                self.state = 156
                self.match(MiLenguajeParser.T__10)
                pass
            elif token in [27]:
                localctx = MiLenguajeParser.ExprIDContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 158
                self.match(MiLenguajeParser.ID)
                pass
            elif token in [28]:
                localctx = MiLenguajeParser.ExprNumeroContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 159
                self.match(MiLenguajeParser.NUMERO_REAL)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 173
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 171
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        localctx = MiLenguajeParser.ExprPotenciaContext(self, MiLenguajeParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 162
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 163
                        self.match(MiLenguajeParser.T__16)
                        self.state = 164
                        self.expr(6)
                        pass
